namespace CleanArchitecture.Requestor
{
    public interface IRequest
    {
        
    }
}